MetaDataZip/unpackaged/unpackaged/objects/Property_enquiry__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Property Enquiries</relationshipLabel>
        <relationshipName>Property_Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Property Enquiry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Property_enquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>